# delta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  config.example.json  config.example.yaml  go.mod  main.go  pyproject.toml
internal/config/: config.go
internal/git/: git.go
internal/scanner/: scanner.go
internal/tui/: input.go  model.go  styles.go  table.go  tui.go
src/delta/: __init__.py  cli.py  config.py  git_info.py  scanner.py
src/delta/tui/: app.py  styles.tcss
