[project]
name = "delta"
version = "0.2.0"
description = "A terminal UI tool for scanning and managing local Git repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.scripts]
delta = "delta.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delta"]
